# sap

./: .env  docker-compose.yml
sap_proxy/: Dockerfile  sap.conf.template
sap_web/: Dockerfile  db.sqlite3  entrypoint.sh  manage.py  pyproject.toml
sap_web/apps/datacollector/: admin.py  models.py
sap_web/apps/datacollector/migrations/: 0001_initial.py  0002_auto_20201110_0146.py
sap_web/apps/entities/: models.py
sap_web/apps/entities/migrations/: 0001_initial.py
sap_web/sap_web/: asgi.py  settings.py  urls.py  wsgi.py
