[tool.poetry]
name = "sap_web"
version = "0.1.0"
description = ""
authors = ["Eduardo Basílio"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.3"
python-decouple = "^3.3"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
